--- a/index.html
+++ b/index.html
@@ -10,10 +10,16 @@
     body {
       display: flex;
       flex-direction: column;
+      min-height: 100vh;
+    }
+    .content-wrapper {
+      flex: 1;
+      display: flex;
+      flex-direction: column;
       align-items: center;
       justify-content: center;
-      height: 100vh;
       text-align: center;
+      padding: 2rem 1rem;
     }
     .nav-links {
       list-style: none;
@@ -38,10 +44,30 @@
   </style>
 </head>
 <body>
-  <h1>Falcon's Dekaron Tools</h1>
-  <ul class="nav-links">
-    <li><a href="ossuary-simulator/index.html">Ossuary Drop Simulator</a></li>
-    <li><a href="upgrade-simulator/index.html">Upgrade Simulator</a></li>
-  </ul>
+  <!-- Navigation Bar -->
+  <nav class="navbar">
+    <a href="/" class="navbar-brand">Falcon's Dekaron Tools</a>
+    <button class="menu-button" aria-label="Toggle navigation menu">
+      ☰
+    </button>
+    <div class="nav-menu">
+      <ul>
+        <li><a href="/">Home</a></li>
+        <li><a href="/ossuary-simulator/index.html">Ossuary Simulator</a></li>
+        <li><a href="/upgrade-simulator/index.html">Upgrade Simulator</a></li>
+      </ul>
+    </div>
+  </nav>
+
+  <div class="content-wrapper">
+    <h1>Falcon's Dekaron Tools</h1>
+    <ul class="nav-links">
+      <li><a href="ossuary-simulator/index.html">Ossuary Drop Simulator</a></li>
+      <li><a href="upgrade-simulator/index.html">Upgrade Simulator</a></li>
+    </ul>
+  </div>
+
+  <!-- Load common JavaScript -->
+  <script src="assets/js/common.js"></script>
 </body>
 </html>
