--- a/upgrade-simulator/index.html
+++ b/upgrade-simulator/index.html
@@ -12,6 +12,21 @@
   <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
+  <!-- Navigation Bar -->
+  <nav class="navbar">
+    <a href="/" class="navbar-brand">Falcon's Dekaron Tools</a>
+    <button class="menu-button" aria-label="Toggle navigation menu">
+      ☰
+    </button>
+    <div class="nav-menu">
+      <ul>
+        <li><a href="/">Home</a></li>
+        <li><a href="/ossuary-simulator/index.html">Ossuary Simulator</a></li>
+        <li><a href="/upgrade-simulator/index.html">Upgrade Simulator</a></li>
+      </ul>
+    </div>
+  </nav>
+
   <div class="container">
     <h1>Upgrade Simulator</h1>
 
@@ -140,6 +155,9 @@
       </div>
     </div>
   </div>
+  
+  <!-- Load common JavaScript -->
+  <script src="../assets/js/common.js"></script>
   <!-- Load simulator-specific JavaScript -->
   <script src="js/script.js"></script>
 </body>
