--- a/upgrade-simulator/index.html
+++ b/upgrade-simulator/index.html
@@ -14,15 +14,15 @@
 <body>
   <!-- Navigation Bar -->
   <nav class="navbar">
-    <a href="/" class="navbar-brand">Falcon's Dekaron Tools</a>
+    <a href="../index.html" class="navbar-brand">Falcon's Dekaron Tools</a>
     <button class="menu-button" aria-label="Toggle navigation menu">
       ☰
     </button>
     <div class="nav-menu">
       <ul>
-        <li><a href="/">Home</a></li>
-        <li><a href="/ossuary-simulator/index.html">Ossuary Simulator</a></li>
-        <li><a href="/upgrade-simulator/index.html">Upgrade Simulator</a></li>
+        <li><a href="../index.html">Home</a></li>
+        <li><a href="../ossuary-simulator/index.html">Ossuary Simulator</a></li>
+        <li><a href="../upgrade-simulator/index.html">Upgrade Simulator</a></li>
       </ul>
     </div>
   </nav>
